# tabletop-atlas

./: Cargo.toml  README.md  package.json  pnpm-lock.yaml
backend/: Cargo.toml  build.rs
backend/src/: embeddings.rs  llm.rs  main.rs  pdf.rs  pdf_processor.rs
backend/src/db/: chat.rs  embeddings.rs  games.rs  house_rules.rs  mod.rs
backend/src/handlers/: chat.rs  games.rs  house_rules.rs  mod.rs  static_files.rs  upload.rs
backend/src/models/: chat.rs  embedding.rs  game.rs  house_rule.rs  mod.rs
frontend/: eslint.config.js  openapi.json  package.json  pnpm-lock.yaml
frontend/src/: app.css
frontend/src/api/: Api.ts  http-client.ts  util.ts
frontend/src/lib/: index.ts  utils.ts
frontend/src/lib/components/: GameDetail.svelte  GameForm.svelte  GameList.svelte  Header.svelte  HeaderSearch.svelte  PDFUpload.svelte  QuickSearch.svelte  RulesSearch.svelte  SearchModal.svelte
frontend/src/lib/components/ui/: Badge.svelte  Button.svelte  Card.svelte  Input.svelte  Label.svelte  README.md  Textarea.svelte  index.ts
frontend/src/lib/components/ui/empty-state/: empty-state.svelte  index.ts
frontend/src/lib/components/ui/loading-spinner/: index.ts  loading-spinner.svelte
frontend/src/lib/components/ui/progress/: progress.svelte
frontend/src/lib/components/ui/search-input/: index.ts  search-input.svelte
frontend/src/lib/components/ui/search-result/: index.ts  search-result.svelte
frontend/src/lib/stores/: header.ts  search.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/chat/: +page.svelte
frontend/src/routes/games/: +page.svelte
frontend/src/routes/games/[id]/: +page.svelte
frontend/src/routes/games/[id]/edit/: +page.svelte
frontend/src/routes/games/add/: +page.svelte
frontend/src/routes/search/: +page.svelte
frontend/src/routes/upload/: +page.svelte
migrations/: V001__create_games_table.sql  V002__create_house_rules_table.sql  V003__create_embeddings_table.sql  V004__seed_games_data.sql
src/: lib.rs  main.rs
src/handlers/: mod.rs
src/models/: mod.rs  state.rs
