[workspace]
members = ["backend"]
resolver = "3"

[workspace.dependencies]
dropshot = "0.16"
schemars = { version = "0.8", features = ["uuid"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = "0.36.0"
rusqlite_migration = "2.2.0"
anyhow = "1.0.98"
