[workspace]
members = ["backend"]
resolver = "3"

[workspace.dependencies]
dropshot = "0.16"
http = "1.3.1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
schemars = { version = "0.8", features = ["uuid", "chrono"] }
rusqlite = "0.36.0"
rusqlite_migration = "2.2.0"
anyhow = "1.0.98"
semver = "1.0"
# HTTP client for API calls
reqwest = { version = "0.11", features = ["json", "multipart"] }
# JSON handling
serde_json = "1.0"
# Base64 encoding for embeddings storage
base64 = "0.21"
# File handling
tempfile = "3.8"
# Text processing
regex = "1.10"
# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
# Static file serving
mime_guess = "2.0"
include_dir = "0.7"
hyper = { version = "0.14", features = ["full"] }
