[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
dropshot.workspace = true
schemars.workspace = true
serde.workspace = true
tokio.workspace = true
uuid.workspace = true
chrono.workspace = true
rusqlite.workspace = true
rusqlite_migration.workspace = true
anyhow.workspace = true
semver.workspace = true
reqwest.workspace = true
serde_json.workspace = true
base64.workspace = true
tempfile.workspace = true
regex.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
http.workspace = true
mime_guess.workspace = true
include_dir.workspace = true
hyper.workspace = true
clap.workspace = true

[build-dependencies]
# No build dependencies needed for now
